[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3loadtest"
version = "4.0.0"
description = "S3 object store stress testing — maximized by default"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26",
]

[project.scripts]
s3loadtest = "s3loadtest.__main__:main"

[tool.setuptools]
package-dir = {"s3loadtest" = "."}
packages = ["s3loadtest", "s3loadtest.cli", "s3loadtest.tests"]
